# aap-newlib

./: COPYING.LIBGLOSS  ChangeLog.AAP  config.sub  configure  configure.ac  libtool.m4
libgloss/: ChangeLog.AAP  configure.in
libgloss/aap/: Makefile.in  _exit.c  aclocal.m4  close.c  config.h.in  configure  configure.ac  configure.in  crt0.S  environ.c  execve.c  fork.c  fstat.c  getpid.c  isatty.c  kill.c  link.c  lseek.c  open.c  read.c  sbrk.c  stat.c  times.c  unlink.c  wait.c  write.c
libgloss/libnosys/: configure  configure.in
newlib/: ChangeLog.AAP  configure.host
newlib/libc/include/machine/: ieeefp.h  setjmp.h  time.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/aap/: Makefile.in  aclocal.m4  configure  setjmp.S
